--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           branches: |
             [
-              'master',
+              'main',
               {
                 name: 'beta',
                 prerelease: true
